- Updated fluid-width to cover issue in theme stretchiness

--- a/global.fluid-width.css
+++ b/global.fluid-width.css
@@ -5,3 +5,9 @@
     width:auto;
     min-width:960px;
 }
+
+.themeManager
+{
+    min-width:925px;
+    width:auto !important;
+}
